discussion/kv_engine/180292/180292_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Always collect trace information in serverless deployments

By collecting trace information the slow operation logging
contains the trace spans for where time was spent

Change-Id: I55943e0f71844346d891b022fca9f6d0d509fd31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-09-22 15:42:15.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-22 16:04:48.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20605/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:219:18: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
            std::this_thread::sleep_for(std::chrono::milliseconds{50});
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20605/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:219:18:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20605/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49625/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_cluster/misc_tests.cc(86): error: Value of: nmvb
  Actual: false
Expected: true
Did not get the NotMyVbucket callback
[  FAILED  ] BasicClusterTest.MultiGet (4 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49625/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10416/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
[2022-09-22T15:57:49.856Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp_cluster/misc_tests.cc:86: Failure
[2022-09-22T15:57:49.856Z] Value of: nmvb
[2022-09-22T15:57:49.856Z]   Actual: false
[2022-09-22T15:57:49.856Z] Expected: true
[2022-09-22T15:57:49.856Z] Did not get the NotMyVbucket callback
[2022-09-22T15:57:49.856Z] [  FAILED  ] BasicClusterTest.MultiGet (1 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10416/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21975/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21975/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23760/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
[2022-09-22T15:59:28.831Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_cluster/misc_tests.cc:86: Failure
[2022-09-22T15:59:28.831Z] Value of: nmvb
[2022-09-22T15:59:28.831Z]   Actual: false
[2022-09-22T15:59:28.831Z] Expected: true
[2022-09-22T15:59:28.831Z] Did not get the NotMyVbucket callback
[2022-09-22T15:59:28.831Z] [  FAILED  ] BasicClusterTest.MultiGet (37 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23760/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22959/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
[2022-09-22T15:51:48.968Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp_cluster/misc_tests.cc:86: Failure
[2022-09-22T15:51:48.968Z] Value of: nmvb
[2022-09-22T15:51:48.968Z]   Actual: false
[2022-09-22T15:51:48.968Z] Expected: true
[2022-09-22T15:51:48.968Z] Did not get the NotMyVbucket callback
[2022-09-22T15:51:48.968Z] [  FAILED  ] BasicClusterTest.MultiGet (4 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22959/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22585/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
[2022-09-22T15:49:55.639Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp_cluster/misc_tests.cc:86: Failure
[2022-09-22T15:49:55.639Z] Value of: nmvb
[2022-09-22T15:49:55.639Z]   Actual: false
[2022-09-22T15:49:55.639Z] Expected: true
[2022-09-22T15:49:55.639Z] Did not get the NotMyVbucket callback
[2022-09-22T15:49:55.639Z] [  FAILED  ] BasicClusterTest.MultiGet (4 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22585/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30988/ : FAILURE

Failure of GoogleTest "BasicClusterTest.MultiGet":

<pre>
[ RUN      ] BasicClusterTest.MultiGet
[2022-09-22T15:55:02.385Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_cluster/misc_tests.cc:86: Failure
[2022-09-22T15:55:02.385Z] Value of: nmvb
[2022-09-22T15:55:02.385Z]   Actual: false
[2022-09-22T15:55:02.385Z] Expected: true
[2022-09-22T15:55:02.385Z] Did not get the NotMyVbucket callback
[2022-09-22T15:55:02.385Z] [  FAILED  ] BasicClusterTest.MultiGet (5 ms)
BasicClusterTest.MultiGet
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30988/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19830/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41707/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10316/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
